Uploaded image for project: 'Mesos'
  1. Mesos
  2. MESOS-2862

mesos-fetcher won't fetch uris which begin with a " "

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Minor
    • Resolution: Fixed
    • 0.22.1
    • 0.24.0
    • fetcher
    • Mesosphere Sprint 14
    • 2

    Description

      Discovered while running mesos with marathon on top. If I launch a marathon task with a URI which is " http://apache.osuosl.org/mesos/0.22.1/mesos-0.22.1.tar.gz" mesos will log to stderr:

      I0611 22:39:22.815636 35673 logging.cpp:177] Logging to STDERR
      I0611 22:39:25.643889 35673 fetcher.cpp:214] Fetching URI ' http://apache.osuosl.org/mesos/0.22.1/mesos-0.22.1.tar.gz'
      I0611 22:39:25.648111 35673 fetcher.cpp:94] Hadoop Client not available, skipping fetch with Hadoop Client
      Failed to fetch:  http://apache.osuosl.org/mesos/0.22.1/mesos-0.22.1.tar.gz
      Failed to synchronize with slave (it's probably exited)
      

      It would be nice if mesos trimmed leading whitespace before doing protocol detection so that simple mistakes are just fixed.

      Attachments

        Activity

          People

            hartem Artem Harutyunyan
            cmaloney Cody Maloney
            Benjamin Hindman Benjamin Hindman
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: