Changed fetcher to handle leading whitespace in URLs.

Fixes MESOS-2862.

Review: https://reviews.apache.org/r/35755